--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 <head> </head>
 <body>
+    <div>
+        <img src="images/KTP PAK MUKHLIS.jpg" alt="profile image" />
+        <h2>Angga Pratama</h2>
+     </div>
 Hello World
 </body>
 
