--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head> </head>
 <body>
     <div>
-        <img src="images/KTP PAK MUKHLIS.jpg" alt="profile image" />
-        <h2>Angga Pratama</h2>
+        <img id= “profile-image” src="images/KTP PAK MUKHLIS.jpg" alt="profile image" />
+        <h2 id=“profile-name”>Angga Pratama</h2>
      </div>
 Hello World
 </body>
